Fix ticket booking, cancellation, and flight schedule endpoints
- Updated booking and cancellation logic with proper error handling.
- Added success messages for ticket operations.
- Fixed flight schedule retrieval for a date range.
- Cleaned up code for better readability.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+# Enable H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# H2 database settings
+spring.datasource.url=jdbc:h2:file:C:/Users/Archana Dubey/test;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# Hibernate settings
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
